[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/3D/npc/puma_export.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Actors/Puma/puma.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 4.0

[sub_resource type="BoxShape" id=2]
extents = Vector3( 14.5813, 6.16661, 22.8903 )

[sub_resource type="SphereShape" id=3]

[node name="Puma" type="KinematicBody" groups=["sheep_offenders"]]
collision_layer = 65536
collision_mask = 2
script = ExtResource( 2 )

[node name="puma_export" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.38471, 0, -6.62072e-07, 0, 4.38471, 0, 6.62072e-07, 0, -4.38471, 0, 0, 0 )

[node name="RayCastTerrain" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collision_mask = 2

[node name="PumaArea" type="Area" parent="."]
collision_layer = 65536

[node name="CollisionShape" type="CollisionShape" parent="PumaArea"]
shape = SubResource( 1 )

[node name="View" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.08733 )
collision_layer = 0
collision_mask = 131072
monitorable = false

[node name="ViewShape" type="CollisionShape" parent="View"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.67146, -17.1787 )
shape = SubResource( 2 )

[node name="TimerPickVictim" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="TimerAttackSpeed" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="MouthPos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85553, -3.3479 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[connection signal="area_entered" from="View" to="." method="_on_view_area_entered"]
[connection signal="timeout" from="TimerPickVictim" to="." method="on_pick_victim"]
[connection signal="timeout" from="TimerAttackSpeed" to="." method="on_try_attack"]
